--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
-                            <h1>Clean Blog</h1>
-                            <span class="subheading">A Blog Theme by Start Bootstrap</span>
+                            <h1>Welcome to my Space </h1>
+                            <span class="subheading">A place where I jot down random, little thoughts</span>
                         </div>
                     </div>
                 </div>
