Some small updates

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
                             <h1>About Me</h1>
-                            <span class="subheading">This is what I do.</span>
+                            <span class="subheading"> < This is where I come to being > </This></span>
                         </div>
                     </div>
                 </div>
@@ -52,9 +52,16 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+                        <p> Hello, thanks for visiting my space ! My name is Anup, and I'm a AI/ML Computer Performance Architect by professsion. 
+                            I was born and raised in Guwahati, a city in the North-Eastern state of Assam in India. 
+                            Surrounded by mighty Brahmaputra river at one end and hills on the other, this city has a trademark characteristic of an Indian small town that taught me to always have bigger aspirations in life. </p>
+                        <p> My childhood memories are cherished by attending legacy Cotton Collegiate Govt Higher Secondary School followed by Cotton College. 
+                            Since my childhood I had a deep internal desire to learn about the workings of a Computer (which was primarly used for playing the legendary RoadRash video game back in the 90's) - you could call it the life's calling that I was lucky to feel the pull at a very young age. 
+                            Subsequently I completed my undergraduate studies in Electronics and Instrumentation Engineering from the National Institue of Technology, Rourkela in India. 
+                            Following my Bachelors degree I have worked as an Automotive Electronics Engineer at Mahindra & Mahindra ltd, in Chennai. </p>
+                        <p> As a next step to further my horizons, I decided to pursue higher studies in the land of opportunities and joined the Pennylvania State University as a graduate student, in the lovely town of State-College also called the Happy Valley. 
+                            After spending about six and a half years at the Computer Science & Engineering Department, I've recently moved to San Jose in California to start my full time career. 
+                            I'm grateful to all my family members and friends, who have helped to come this far in the journey of life. </p>
                     </div>
                 </div>
             </div>
