Rename file, and some updates

--- a/Ghost.html
+++ b/Ghost.html
@@ -81,11 +81,11 @@
                         </p>
 
                         <p>
-                            But sleeping comfortably in the morning hours is something I prize and I cannot allow this incident to ruin my hard earned sleep after long day of work. Thus I mustered enough courage to confornt this "Ghost" playing music. Either I get to the root of the situation, or I get to become one of those very few with experince of "facing" a ghost. I sprung out of my bed, cautiously start to tread towards the living room. Music was unmistakley playing in my living room. Next few steps, I saw lights on my monitor screen, and audio playing out of the connected speaker set. Is this some invisible force operating the system ? 
+                            But sleeping comfortably in the morning hours is something I prize and I cannot allow this incident to ruin my hard earned sleep after long day of work. Thus I mustered enough courage to confornt this "Ghost" playing music. Either I get to the root of the situation, or I get to become one of those very few with experince of facing a ghost from close quarters. I sprung out of my bed, cautiously start to tread towards the living room. Music was unmistakley playing in my living room. Next few steps, I saw lights on my monitor screen, and audio playing out of the connected speaker set. Is this some invisible force operating the system ? 
                         </p>
 
                         <p>
-                            I stood close by the computer desk, trying to unravel this moment of mystrey. To my utmost surprise, the monitor screen appeared in locked state - only to add even more element of suspense. Holding my breadth, I grabbed on to the mouse and keyboard, and hastily entered my password to log into the system. Within next few seconds, the locked screen gave away to the Desktop screen and this is when I was able to connect all the dots back. 
+                            I stood close by the computer desk, trying to unravel this moment of mystrey. To my utmost surprise, the monitor screen appeared in locked state - only to add some more element of suspense. Holding my breath, I grabbed on to the mouse and keyboard, and hastily entered my password to log into the system. Within next few seconds, the locked screen gave away to the Desktop screen and this is when I was able to connect all the dots back. 
 
                         </p>
 
