--- a/morning.html
+++ b/morning.html
@@ -14,15 +14,15 @@
     </style>
 </head>
 <body>
-    <p> The clock hand read about 5am in the morning, as I managed to glance at it hanging by the side wall. 
-        It was still dark, with thin veil of incadescent light penetrarting the window blinds.
+    <p> The clock hand read about 5 in the morning, as I managed to glance at it hanging by the side wall. 
+        It was still dark outside, with thin veil of incadescent light from the street penetrarting the window blinds.
         I tried to open my eyes as little as possible, to avoid disrupting the sleep and with the hope that I could get back to sleep again. 
         I hate waking up in the wee hours, especially in a cold December night when it is much easier to cozy up to the warmth of the blanket. 
         Of late, I have woke up during odd hours of night, mostly owing to the stress of possibly missing early morning Zoom meetings for the office. But today it was unusual. 
         I heard a distant music of Piano playing somehwere right near to my apartment complex. I live in a modest 1 bedroom rented apartment complex with close neighbors, where it's not unsual to ocassionally hears sounds from neighbors Television or Audio playing equipment.
     </p>
     <p> 
-        There must be new neighors who might have moved in - I thought to myself. And sure enough, they must have some sense of taste in music. Who else would      otherwise be playing classical Piano music at such odd hour of the day, to the extent of risking waking up their neighbors. I also love listening to music a lot, sometimes I'm afraid of playing music loud enough to bother my neighbors in a similar way. This is how others might feel, in case I played some songs loud enough. I do own a relatively loud set of speaker system capable producing some high decibles to annoy an unsuspecting individual. Thankfully, such a situation hasn't rose yet. 
+        There must be new neighors who might have moved in - I thought to myself. And sure enough, they must have some sense of taste in music. Who else would otherwise be playing classical Piano music at such odd hour of the day, to the extent of risking waking up their neighbors. I also love listening to music a lot, sometimes I'm afraid of playing music loud enough to bother my neighbors in a similar way. This is how others might feel, in case I played some songs loud enough. I do own a set of speaker system capable producing some high decibles to annoy an unsuspecting individual. Thankfully, such a situation hasn't rose yet. 
     </p>
 
     <p> 
@@ -47,7 +47,7 @@
     </p>
 
     <p> 
-        What happened in summary a computer reboot, as a part of regular Windows patch update and the machine was scheduled to reboot in non working hours sometime between 4-5am. This is what exactly happened, but what also happened was that it restored all my previous working windows. Since I had left the machine on,media player app, it resumed playing the same track from begging. And given the track was about an hour long, it was enough not only for me wake up, but also to go through the entire episode of experience I had. What a silly moment, I thought, not knowing whether to feel annoyed or amused, while also wearing a sigh of relief.   
+        What happened in summary was a computer reboot, as a part of regular Windows patch update and the machine was scheduled to reboot in non working hours sometime between 4-5am. This is what exactly happened, but what also happened was that it restored all my previous working windows. Since I had left the machine on media player app, it resumed playing the same track from begging. And given the track was about an hour long, it was enough not only for me wake up, but also to go through the entire episode of experience I had. What a silly moment, I thought, not knowing whether to feel annoyed or amused, while also wearing a sigh of relief.   
     </p>
 
     <p>
