--- a/morning.html
+++ b/morning.html
@@ -47,7 +47,7 @@
     </p>
 
     <p> 
-        What happened in summary was a computer reboot, as a part of regular Windows patch update and the machine was scheduled to reboot in non working hours sometime between 4-5am. This is what exactly happened, but what also happened was that it restored all my previous working windows. Since I had left the machine on media player app, it resumed playing the same track from begging. And given the track was about an hour long, it was enough not only for me wake up, but also to go through the entire episode of experience I had. What a silly moment, I thought, not knowing whether to feel annoyed or amused, while also wearing a sigh of relief.   
+        What happened in summary was a computer reboot, as a part of regular Windows patch update and the machine was scheduled to reboot in non working hours sometime between 4-5am. This is what exactly happened, but what also happened was that it restored all my previous working windows. Since I had left the machine on media player app, it resumed playing the same track from beginning. And given the track was about an hour long, it was enough not only for me wake up, but also to go through the entire episode of experience I had. What a silly moment, I thought, not knowing whether to feel annoyed or amused, while also wearing a sigh of relief.   
     </p>
 
     <p>
